html-overflow /v-splash bug-fix 05

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -18,7 +18,16 @@ html {
   scroll-behavior: smooth;
 }
 
+.st-plane{
+
+  background-color: rgba(255, 0, 0, 0.185)!important;
+
+}
+
 html{
+  display: flex;
+  height: 100lvh;
+  overflow: hidden;
   /* overflow: hidden!important; */
 }
 
